# SWEVendingMachine

./: .gitignore  README.md  app.py  docker-compose.yml  openapi_projectapis.yaml  pyproject.toml  requirements.txt  run.py  sonar-project.properties  tox.ini
.github/workflows/: build.yml
app/: __init__.py  app.py  extensions.py  models.py
app/models/: machine_stock.py  machines.py  products.py  stock_record.py  testdb.py
app/routes/: machines.py  products.py  stock.py  stock_records.py
app/templates/: base.html  index.html
scripts/: vendingmachinescript.sql
templates/: base.html
tests/: conftest.py  machine_tests.py  test_app.py  test_machines.py  test_products.py  test_stock.py  test_stock_records.py
